--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="apple-touch-icon" href="Basketball.png">
     <meta charset="UTF-8">
     <title>Basketball Aimbot</title>
     <style>
